fix: input zoom on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,4 +43,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  input {
+    @apply !text-[16px];
+  }
 }
